--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-firefox-driver</artifactId>
+            <artifactId>selenium-java</artifactId>
             <version>2.46.0</version>
         </dependency>
         <dependency>
